--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,11 @@
     <string name="choixInvite">Je suis invité</string>
     <string name="choix">Choisir</string>
     <string name="validerTable">Valider la table</string>
+    <string name="végé">Végé</string>
+    <string name="tout">Tout</string>
+    <string name="vegan">Vegan</string>
+    <string name="sansGluten">Sans gluten</string>
+    <string name="aucunTheme">Pas de thème</string>
+    <string name="pirateTheme">Pirates</string>
+    <string name="haloweenTheme">Haloween</string>
 </resources>
